bebytes/tests/compile_time/overlap.stderr
error: U8 attributes must obey the sequence specified by the previous attributes. Expected position 4 but got 3
  --> tests/compile_time/overlap.rs:13:5
   |
13 | /     #[U8(size(4), pos(3))]
14 | |     second: u8,
   | |______________^
